--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="col-xl-6 caption-inline">
                     <a>
-                        <img src="assets/images/cemetary.jpg" class="img-fluid gallery-size image-position" alt="Image of old cemetary headstones">
+                        <img src="assets/images/old-cemetery.jpg" class="img-fluid gallery-size image-position" alt="Image of old cemetary headstones">
                         <div class="gallery-caption">
                             <h3>‘She Weeps Over Rahoon’, James Joyce</h3>
                         </div>
@@ -116,9 +116,9 @@
             
                 <div class="col-xl-6 caption-inline">
                     <a src="#" target="_blank">
-                        <img src="assets/images/wild-atlantic.jpeg" class="img-fluid gallery-size image-position" alt="Galway hooker boat in ocean">
+                        <img src="assets/images/nimmos-pier.jpg" class="img-fluid gallery-size image-position" alt="Galway hooker boat in ocean">
                         <div class="gallery-caption">
-                            <h3>‘Galway’, Mary Devenport O’Neill</h3>
+                            <h3>‘On Nimmo's Pier’, Ben Murphy</h3>
                         </div>
                     </a>
                 </div>
