fixed responsive styles for gallery on homepage and added hover effect for images on desktop view

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header class="sticky-header">
+    <header>
 
         <!--Header-->
         <div class="container-fluid"> 
@@ -75,13 +75,11 @@
             
         </div>
     </section>
-
+    A short paragraph about this project and Galway city
     <section>
         
-
+        FAQ dropdown
     </section>
-
-    <section>test</section>
 
     <!--Footer--> 
 
