--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header class="sticky-header">
+    <header>
 
         <!--Header-->
         <div class="container-fluid"> 
@@ -76,9 +76,9 @@
         </div>
     </section>
 
-    <section>test</section>
+    <section>Contact Form</section>
 
-    <section>test</section>
+    <section>Information on how to contact us</section>
 
     <!--Footer--> 
 
