Remade the homepage so that I could test out a bootstrap mobile navbar and have a working navbar on mobile now that will be styled later

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                                 Contact</a>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-outline-dark nav-button"><a href="#">Shop</a></button>
+                            <button type="button" class="btn btn-outline-light nav-button"><a href="#">Shop</a></button>
                         </li>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                             <i class="fa fa-bars"></i>
