--- a/contact.html
+++ b/contact.html
@@ -86,31 +86,39 @@
     </section>
 
     <section>
-        <div class="row gallery-background">
+        <div class="row gallery-background contact-form">
             <div class="col-xl-6">
                 <form>
-                    <h3>Tell us more!</h3>
-                    <label for="fname"><h3 class="form-font">First Name</h3></label>
+                    <h2 class="mobile-heading">Tell us more!</h2>
+                    <br>
+                    <label for="fname" class="mobile-label"><h3 class="form-font">First Name</h3></label>
                     <input type="text" id="fname" name="firstname">
-                    <label for="fname"><h3 class="form-font">Last Name</h3></label>
+                    <br>
+                    <label for="fname" class="mobile-label"><h3 class="form-font">Last Name</h3></label>
                     <input type="text" id="lname" name="lastname">
                     <br>
-                    <label for="email"><h3 class="form-font">Email</h3></label>
+                    <label for="email" id="email-label" class="mobile-label"><h3 class="form-font">Email</h3></label>
                     <input type="email" id="email" name="email" placeholder="example@email.com">
                     <br>
-                    <label for="textarea"><h3 class="form-font">Send us your feedback, comments, or ideas</h3></label>
+                    <br>
+                    <label for="textarea" class="mobile-label"><h3 class="form-font">Send us your comments, ideas, or feedback</h3></label>
                     <br>
                     <textarea type="textarea" id="textarea" name="textarea" cols="45" rows="8"></textarea>
+                    <br>
+                    <br>
                     <input type="submit" value="Submit" class="newsletter-button btn btn-outline-light">
 
                 </form>
             </div> 
 
-            <div class="col-xl-6">
-                <h2>Contact us</h2>
+            <div class="col-xl-6 contact-us">
+                <h2 class="mobile-heading">Contact us</h2>
+                <br>
                 <p>Please get in touch if you have any questions about this project or would like to get involved!
                     <br>
+                    <br>
                     Phone: +353 087 609 3111
+                    <br>
                     <br>
                     Email: kelleyc416@gmail.com
                 </p>
