Moved quote to left

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section>
         <div class="row quote-background">
             <div class="col-xl-12 quote-box-size quote-mobile">
-                <h2>"This town is eaten through with memory
+                <h2 class="quote-position">This town is eaten through with memory
                     <br>
                     Of pride and thick red Spanish wine and gold
                     <br>
