--- a/poetry.html
+++ b/poetry.html
@@ -88,11 +88,9 @@
     <section>
         <div class="row quote-background">
             <div class="col-xl-12 quote-box-size quote-mobile">
-                <h2>"This town is eaten through with memory
-                    <br>
-                    Of pride and thick red Spanish wine and gold
-                    <br>
-                    And a great come and go"</h2>
+                <h2 class="quote-position">Despite this easiness with life,<br>
+                    there is a waiting, a look out<br>
+                    in anticipation of something.</h2>
             </div>
         </div>       
     
