Adjusted desktop banner size and added extra space at the bottom of the gallery on the home page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <a href="poetry.html#nimos-pier">
                         <img src="assets/images/galway-hookers.jpg" class="gallery-size image-position mobile-gallery" alt="Galway hooker boat at the pier">
                     </a>    
-                        <div class="gallery-caption mobile-caption">
+                        <div class="gallery-caption mobile-caption bottom-padding mobile-bottom-padding">
                             <h3>‘On Nimmo's Pier’ by Ben Murphy</h3>
                         </div>
                     
@@ -138,7 +138,7 @@
                     <a href="poetry.html#tired-hair">
                         <img src="assets/images/eyre-square.jpg" class="gallery-size image-position mobile-gallery" alt="Image of old cemetary headstones">
                     </a>    
-                        <div class="gallery-caption mobile-caption">
+                        <div class="gallery-caption mobile-caption bottom-padding">
                             <h3>‘Men with Tired Hair’ by Rita Anne Higgins</h3>
                         </div>
                 </div> 
