--- a/index.html
+++ b/index.html
@@ -201,18 +201,18 @@
                     <ul>
                         
                         <li class="social-icon">
-                            <a href="facebook.com">
+                            <a href="https://www.facebook.com/" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                             </a>
 
                         </li>
                         <li class="social-icon">
-                            <a href="instagram.com">
+                            <a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                         <li class="social-icon">
-                            <a href="http://twitter.com/">
+                            <a href="https://www.twitter.com/" target="_blank">
                             <i class="fab fa-twitter"></i>
                             </a>
                         </li>
