Added a new logo to the site. Reduced the height of the desktop header further. Made changes to link hover colours on the Contact Page. Edited the mobile header to move the mobile icon back to the right and make the header height smaller

--- a/online-shop.html
+++ b/online-shop.html
@@ -26,13 +26,11 @@
         <div class="container-fluid"> 
             <div class="row no-gutter">
                 <!--Logo-->
-                <div class="col-6 col-md-6">
-                    
-                   <h1>Poems Around Galway</h1>   
-                    <a href="index.html" class="logo mobile-logo-pos">
-                        <img src="/assets/images/milestone project logo 1.png" alt="Poems Around Galway logo" class="mobile-logo">
+                <div class="col-6 col-md-6 logo mobile-logo-pos mobile-logo">
+                    <a href="/index.html">
+                        <img src="/assets/images/milestone project logo 2.png" alt="Poems Around Galway logo">
                     </a> 
-                      
+                    <h1>Poems Around Galway</h1> 
                 </div>
   
                 <div class="col-md-8 col-lg-6 col-xl-6 mobile-nav">   
@@ -49,6 +47,11 @@
                                     <a class="nav-link" href="/index.html">
                                 <i class="nav-icon fas fa-house-user"></i>
                                 Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/poetry.html">
+                                <i class="nav-icon fas fa-feather-alt"></i>
+                                Poetry</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/about-this-project.html">
