Ran all pages through W3C validator and updated pages to remove errors. Still working on adding links to buttons without using Javascript

--- a/about-this-project.html
+++ b/about-this-project.html
@@ -28,7 +28,7 @@
                 <!--Logo-->
                 <div class="col-6 logo">
                     <a href="/index.html">
-                        <img src="/assets/images/milestone project logo 2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
+                        <img src="/assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
                     </a> 
                     <h1>Poems Around Galway</h1> 
                 </div>
@@ -81,11 +81,7 @@
 
     </header>
     <!--Header banner image-->
-    <section>
-        <div class="home-banner mobile-banner" alt="Image of the Claddagh in Galway city">
-            
-        </div>
-    </section>
+    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
     <!--About page section-->
     <section>
 
@@ -194,12 +190,12 @@
 
                         </li>
                         <li>
-                            <a href="https://www.kennys.ie/" target="blank">
+                            <a href="https://www.kennys.ie/" target="_blank">
                             Kenny's
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.easons.com/" target="blank">
+                            <a href="https://www.easons.com/" target="_blank">
                                 Eason's
                             </a>
                         </li>
@@ -233,7 +229,7 @@
                         </li>
 
                         <li class="social-icon">
-                            <a href="tel: 0876093111" target="blank">
+                            <a href="tel:0876093111" target="_blank">
                             <i class="fas fa-phone-alt" aria-label="Contact phone number"></i>
                             </a>
                         </li>
