--- a/contact-us.html
+++ b/contact-us.html
@@ -28,7 +28,7 @@
                 <!--Logo-->
                 <div class="col-6 logo">
                     <a href="/index.html">
-                        <img src="/assets/images/milestone project logo 2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
+                        <img src="/assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
                     </a> 
                     <h1>Poems Around Galway</h1> 
                 </div>
@@ -82,11 +82,7 @@
 
     </header>
     <!--Header banner image-->
-    <section>
-        <div class="home-banner mobile-banner">
-            
-        </div>
-    </section>
+    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
     <!--Contact Section-->
     <section>
         <div class="row gallery-background contact-form">
@@ -96,21 +92,21 @@
                 <form aria-label="Send us your comments, ideas, or feedback">
                     <h2 class="mobile-heading">Tell us more!</h2>
                     <br>
-                    <label for="fname" class="label-display mobile-label"><h3 class="form-font">First Name</h3></label>
+                    <label for="fname" class="form-font label-display mobile-label"> First Name</label>
                     <input type="text" id="fname" name="firstname" class="label-width" aria-label="First Name">
                     <br>
                     <br>
-                    <label for="fname" class="label-display mobile-label"><h3 class="form-font">Last Name</h3></label>
+                    <label for="fname" class="form-font label-display mobile-label">Last Name</label>
                     <input type="text" id="lname" name="lastname" class="label-width" aria-label="Last Name">
                     <br>
                     <br>
-                    <label for="email-label" aria-label="Email Address" class="label-display mobile-label"><h3 class="form-font">Email</h3></label>
-                    <input type="email" name="email" placeholder="example@email.com" class="label-width" aria-label="Email Address">
+                    <label for="email-label" aria-label="Email Address" class="form-font label-display mobile-label">Email</label>
+                    <input id="email-label" type="email" name="email" placeholder="example@email.com" class="label-width" aria-label="Email Address">
                     <br>
                     <br>
-                    <label for="textarea" class="label-display mobile-label"><h3 class="form-font">Send us your comments, ideas, or feedback</h3></label>
+                    <label for="textarea" class="form-font label-display mobile-label">Send us your comments, ideas, or feedback</label>
                     <br>
-                    <textarea type="textarea" id="textarea" name="textarea" cols="45" rows="8" aria-label="Fill in comments in this text area"></textarea>
+                    <textarea id="textarea" name="textarea" cols="45" rows="8" aria-label="Fill in comments in this text area"></textarea>
                     <br>
                     <br>
                     <input type="submit" value="Submit" class="newsletter-button btn btn-outline-light" aria-label="Submit this form">
@@ -126,10 +122,10 @@
                 <p class="contact-font">Please get in touch if you have any questions about this project or would like to get involved!
                     <br>
                     <br>
-                    Phone:<a class="contact-email" href="tel:+353 087 609 3111">+353 087 609 3111</a>
+                    Phone:<a class="contact-email" href="tel:0876093111" target="_blank">087 609 3111</a>
                     <br>
                     <br>
-                    Email:<a class="contact-email" href="mailto:kelleyc416@gmail.com">kelleyc416@gmail.com</a>
+                    Email:<a class="contact-email" href="mailto:kelleyc416@gmail.com" target="_blank">kelleyc416@gmail.com</a>
                 </p>
 
             </div>
@@ -173,12 +169,12 @@
 
                         </li>
                         <li>
-                            <a href="https://www.kennys.ie/" target="blank">
+                            <a href="https://www.kennys.ie/" target="_blank">
                             Kenny's
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.easons.com/" target="blank">
+                            <a href="https://www.easons.com/" target="_blank">
                                 Eason's
                             </a>
                         </li>
@@ -212,7 +208,7 @@
                         </li>
 
                         <li class="social-icon">
-                            <a href="tel: 0876093111" target="blank">
+                            <a href="tel:0876093111" target="_blank">
                             <i class="fas fa-phone-alt" aria-label="Contact phone number"></i>
                             </a>
                         </li>
