--- a/online-shop.html
+++ b/online-shop.html
@@ -28,7 +28,7 @@
                 <!--Logo-->
                 <div class="col-6 logo">
                     <a href="/index.html">
-                        <img src="/assets/images/milestone project logo 2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
+                        <img src="/assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
                     </a> 
                     <h1>Poems Around Galway</h1> 
                 </div>
@@ -73,7 +73,7 @@
                                     <button type="button" class="btn btn-outline-light nav-button" aria-label="Online shop">
                                         <a class="nav-link" href="/online-shop.html">Shop</a>
                                     </button>
-                                </li>     
+                                </li>    
                             </ul>
                         </div>  
                     </nav>
@@ -87,11 +87,7 @@
 
     <!--Header banner image-->
 
-    <section>
-        <div class="home-banner mobile-banner">
-            
-        </div>
-    </section>
+    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
 
     <!--Shop Section-->
 
@@ -175,12 +171,12 @@
 
                         </li>
                         <li>
-                            <a href="https://www.kennys.ie/" target="blank">
+                            <a href="https://www.kennys.ie/" target="_blank">
                             Kenny's
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.easons.com/" target="blank">
+                            <a href="https://www.easons.com/" target="_blank">
                                 Eason's
                             </a>
                         </li>
@@ -214,7 +210,7 @@
                         </li>
 
                         <li class="social-icon">
-                            <a href="tel: 0876093111" target="blank">
+                            <a href="tel:0876093111" target="_blank">
                             <i class="fas fa-phone-alt" aria-label="Contact phone number"></i>
                             </a>
                         </li>
