Added Night On Nimmo's Pier content to the Poetry Page

--- a/contact-us.html
+++ b/contact-us.html
@@ -62,7 +62,7 @@
                                     About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact-us.html">
+                                    <a class="nav-link" href="/contact-us.html">
                                     <i class="nav-icon fas fa-laptop"></i>
                                     Contact</a>
                                 </li>
@@ -82,7 +82,7 @@
 
     </header>
     <!--Header banner image-->
-    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
+    <div class="home-banner mobile-banner" title="Desktop- Drawing of buildings in Galway over the canal. Mobile- Image of the Claddagh in Galway city"></div>
     <!--Contact Section-->
     <section>
         <div class="row gallery-background contact-form">
