--- a/online-shop.html
+++ b/online-shop.html
@@ -87,7 +87,7 @@
 
     <!--Header banner image-->
 
-    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
+    <div class="home-banner mobile-banner" title="Desktop- Drawing of buildings in Galway over the canal. Mobile- Image of the Claddagh in Galway city"></div>
 
     <!--Shop Section-->
 
