--- a/poetry.html
+++ b/poetry.html
@@ -81,7 +81,7 @@
 
     </header>
     <!--Banner image-->
-    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
+    <div class="home-banner mobile-banner" title="Desktop- Drawing of buildings in Galway over the canal. Mobile- Image of the Claddagh in Galway city"></div>
     <!--Quote section-->
     <section>
         <div class="row quote-background">
@@ -99,7 +99,7 @@
         <div class="row poetry-background">
             <a id="galway-poem"></a>
             <div class="col-xl-12 col-md-12">
-                <img class="image-position-po mobile-image-po" src="assets/images/galway-poem.jpg" alt="Image of birds flying around the Claddagh in Galway city">
+                <img class="image-position-po mobile-image-po" src="assets/images/galway-poem.jpg" alt="Image of Quay Street on a busy day with a crowd of people">
                 <div class="galway-po">
                     
                 <h3 class="poetry-title">Galway</h3> <br>
@@ -202,31 +202,23 @@
         <div class="row poetry-background ">
             <a id="nimos-pier"></a>
             <div class="col-xl-12 col-md-12">
-                <img class="image-position-po" src="assets/images/galway-poem.jpg" alt="Image of birds flying around the Claddagh in Galway city">
+                <img class="image-position-po" src="assets/images/night-galway.jpg" alt="Image of Galway docks at night">
                 <div class="galway-po">
-                <h3 class="poetry-title">Galway</h3> <br>
-                <p>I know a town tormented by the sea,<br>
-                And there time goes slow <br>
-                That the people see it flow <br>
-                And watch it drowsily, <br>
-                And growing older hour by hour they say, <br>
-                ‘Please God, to-morrow! <br>
-                Then we will work and play,’ <br>
-                And their tall houses crumble away. <br>
-                This town is eaten through with memory <br>
-                Of pride and thick red Spanish wine and gold <br>
-                And a great come and go; <br>
-                But the sea is cold, <br>
-                And the spare, black trees <br>
-                Crouch in the withering breeze <br>
-                That blows from the sea, <br>
-                And the land stands bare and alone, <br>
-                For its warmth is turned away <br>
-                And its strength held in hard cold grey-blue stone; <br>
-                And the people are heard to say, <br>
-                Through the raving of the jealous sea, <br>
-                ‘Please God, to-morrow! <br>
-                Then we will work and play.’
+                <h3 class="poetry-title">Night on Nimmo's Pier</h3> <br>
+                <p>Black Virgin births her Sun yet pauses here.<br>
+                    Fresh foamy crucible for wedding seat.<br>
+                    While hollow stoney chest and mystery meet<br>
+                    cruel chaos of the Wisest kneads the air.<br> 
+                    White hair above the cloud assembles where<br>
+                    I weigh the water in my hand and heat<br> 
+                    each everpresence. Blood and milk complete<br>
+                    moonspring of wellness; heady, still and there!<br>
+                    Red bird world, lofty line when I compare<br>
+                    one open book, one closed, 'til visions greet<br>
+                    fine spansive step for searching eager feet.<br>
+                    Stout spectre new initiate! To share<br>
+                    twin salmon in a bag, and you eat<br>
+                    and wonder long and losse inside K street.
                 </p>
                <br>
                 <audio controls aria-label="Play audio">
