--- a/about-this-project.html
+++ b/about-this-project.html
@@ -81,7 +81,7 @@
 
     </header>
     <!--Header banner image-->
-    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
+    <div class="home-banner mobile-banner" title="Desktop- Drawing of buildings in Galway over the canal. Mobile- Image of the Claddagh in Galway cityy"></div>
     <!--About page section-->
     <section>
 
