--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact-us.html">
+                                    <a class="nav-link" href="/contact-us.html">
                                     <i class="nav-icon fas fa-laptop"></i>
                                     Contact</a>
                                 </li>
@@ -84,7 +84,7 @@
     </header>
 
     <!--Home banner-->
-    <div class="home-banner mobile-banner" title="Image of the Claddagh in Galway city"></div>
+    <div class="home-banner mobile-banner" title="Desktop- Drawing of buildings in Galway over the canal. Mobile- Image of the Claddagh in Galway city"></div>
 
     <!--Quote section-->
     <section>
@@ -130,7 +130,7 @@
                         <img src="assets/images/galway-hookers.jpg" class="gallery-size image-position mobile-gallery" alt="Galway hooker boat at the pier">
                     </a>    
                         <div class="gallery-caption mobile-caption bottom-padding mobile-bottom-padding">
-                            <h3>‘On Nimmo's Pier’ by Ben Murphy</h3>
+                            <h3>‘Night on Nimmo's Pier’ by Ben Murphy</h3>
                         </div>
                     
                 </div>
