Testing links for deployment

--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">
+                                    <a class="nav-link" href="../index">
                                 <i class="nav-icon fas fa-house-user"></i>
                                 Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="poetry.html">
+                                    <a class="nav-link" href="../poetry.html">
                                 <i class="nav-icon fas fa-feather-alt"></i>
                                 Poetry</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about-this-project.html">
+                                    <a class="nav-link" href="../about-this-project.html">
                                     <i class="nav-icon fas fa-info-circle"></i>
                                     About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact-us.html">
+                                    <a class="nav-link" href="../contact-us.html">
                                     <i class="nav-icon fas fa-laptop"></i>
                                     Contact</a>
                                 </li>
                                 <li class="nav-item">
                                     <button type="button" class="btn btn-outline-light nav-button" aria-label="Online shop">
-                                        <a class="nav-link" href="online-shop.html">Shop</a>
+                                        <a class="nav-link" href="../online-shop.html">Shop</a>
                                     </button>
                                 </li>     
                             </ul>
