--- a/about-this-project.html
+++ b/about-this-project.html
@@ -46,7 +46,7 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/index.html">
+                                    <a class="nav-link" href="/milestone-1/index.html">
                                 <i class="nav-icon fas fa-house-user"></i>
                                 Home</a>
                                 </li>
