Treid a fix on the image paths on the homepage so that images will all load as expected

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <!--Logo-->
                 <div class="col-6 logo">
                     <a href="../index.html">
-                        <img src="../images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
+                        <img src="assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
                     </a> 
                     <h1>Poems Around Galway</h1> 
                 </div>
