Changed the link path for header links again

--- a/online-shop.html
+++ b/online-shop.html
@@ -94,7 +94,7 @@
     <section>
         <div class="row gallery-background">
             <div class="col-xl-4">
-                <img class="shop-image" src="/assets/images/tshirt-1.jpg" alt="green t-shirt on a hanger">
+                <img class="shop-image" src="assets/images/tshirt-1.jpg" alt="green t-shirt on a hanger">
                 <p class="shop-text contact-font">Poem Print T-shirt
                     <br>
                     €18
@@ -107,7 +107,7 @@
             </div>
 
             <div class="col-xl-4">
-                <img class="shop-image" src="/assets/images/notebook.jpg" alt="green t-shirt on a hanger">
+                <img class="shop-image" src="assets/images/notebook.jpg" alt="green t-shirt on a hanger">
                 <p class="shop-text contact-font">Notebook
                     <br>
                     €10
@@ -120,7 +120,7 @@
             </div>
 
             <div class="col-xl-4">
-                <img class="shop-image" src="/assets/images/mug-1.jpg" alt="white mug in front of books and pen">
+                <img class="shop-image" src="assets/images/mug-1.jpg" alt="white mug in front of books and pen">
                <p class="shop-text contact-font">Poem Print Mug
                    <br>
                    €12
