--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="row no-gutter header-height">
                 <!--Logo-->
                 <div class="col-6 logo">
-                    <a href="../index.html">
+                    <a href="index.html">
                         <img src="assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
                     </a> 
                     <h1>Poems Around Galway</h1> 
@@ -48,7 +48,7 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../index">
+                                    <a class="nav-link" href="index.html">
                                 <i class="nav-icon fas fa-house-user"></i>
                                 Home</a>
                                 </li>
@@ -58,18 +58,18 @@
                                 Poetry</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../about-this-project.html">
+                                    <a class="nav-link" href="about-this-project.html">
                                     <i class="nav-icon fas fa-info-circle"></i>
                                     About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../contact-us.html">
+                                    <a class="nav-link" href="contact-us.html">
                                     <i class="nav-icon fas fa-laptop"></i>
                                     Contact</a>
                                 </li>
                                 <li class="nav-item">
                                     <button type="button" class="btn btn-outline-light nav-button" aria-label="Online shop">
-                                        <a class="nav-link" href="../online-shop.html">Shop</a>
+                                        <a class="nav-link" href="online-shop.html">Shop</a>
                                     </button>
                                 </li>     
                             </ul>
