This time, I think I've got the fix for the header links and broken image links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../poetry.html">
+                                    <a class="nav-link" href="poetry.html">
                                 <i class="nav-icon fas fa-feather-alt"></i>
                                 Poetry</a>
                                 </li>
