--- a/contact-us.html
+++ b/contact-us.html
@@ -27,8 +27,8 @@
             <div class="row no-gutter header-height">
                 <!--Logo-->
                 <div class="col-6 logo">
-                    <a href="/index.html">
-                        <img src="/assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
+                    <a href="index.html">
+                        <img src="assets/images/milestone-project-logo-2.png" alt="Poems Around Galway logo" class="mobile-logo-pos">
                     </a> 
                     <h1>Poems Around Galway</h1> 
                 </div>
@@ -47,22 +47,22 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../index.html">
+                                    <a class="nav-link" href="index.html">
                                 <i class="nav-icon fas fa-house-user"></i>
                                 Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../poetry.html">
+                                    <a class="nav-link" href="poetry.html">
                                 <i class="nav-icon fas fa-feather-alt"></i>
                                 Poetry</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../about-this-project.html">
+                                    <a class="nav-link" href="about-this-project.html">
                                     <i class="nav-icon fas fa-info-circle"></i>
                                     About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../contact-us.html">
+                                    <a class="nav-link" href="contact-us.html">
                                     <i class="nav-icon fas fa-laptop"></i>
                                     Contact</a>
                                 </li>
