Fixed error with button element nested in <a> element. Adjusted input sizing for mobile form on the Contact Page. Adjusted image sizes to fit the page on mobile on Shop Page.

--- a/online-shop.html
+++ b/online-shop.html
@@ -70,10 +70,12 @@
                                     Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <button type="button" class="btn btn-outline-light nav-button" aria-label="Online shop">
-                                        <a class="nav-link" href="online-shop.html">Shop</a>
-                                    </button>
-                                </li>    
+                                    <div class="nav-link">
+                                        <a class="btn btn-outline-light nav-button" aria-label="Online shop" href="online-shop.html">
+                                        Shop
+                                        </a>
+                                    </div>
+                                </li>  
                             </ul>
                         </div>  
                     </nav>
@@ -100,9 +102,7 @@
                     €18
                 </p>
                 <div class="shop-button">
-                    <button type="button" class="btn btn-outline-light nav-button">
-                        <a class="nav-link" href="#">Purchase</a>
-                    </button>
+                    <a class="btn btn-outline-light nav-button" href="#">Purchase</a>
                 </div>    
             </div>
 
@@ -113,9 +113,7 @@
                     €10
                 </p>
                 <div class="shop-button">
-                    <button type="button" class="btn btn-outline-light nav-button">
-                        <a class="nav-link" href="#">Purchase</a>
-                    </button>
+                    <a class="btn btn-outline-light nav-button" href="#">Purchase</a>
                 </div>    
             </div>
 
@@ -126,9 +124,7 @@
                    €12
                </p> 
                <div class="shop-button">
-                    <button type="button" class="btn btn-outline-light nav-button">
-                        <a class="nav-link" href="#">Purchase</a>
-                    </button>
+                    <a class="btn btn-outline-light nav-button" href="#">Purchase</a>
                 </div>    
             </div>
         </div>
