--- a/about-this-project.html
+++ b/about-this-project.html
@@ -66,10 +66,12 @@
                                     Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <button type="button" class="btn btn-outline-light nav-button" aria-label="Online shop">
-                                        <a class="nav-link" href="online-shop.html">Shop</a>
-                                    </button>
-                                </li>     
+                                    <div class="nav-link">
+                                        <a class="btn btn-outline-light nav-button" aria-label="Online shop" href="online-shop.html">
+                                        Shop
+                                        </a>
+                                    </div>
+                                </li>    
                             </ul>
                         </div>  
                     </nav>
