--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                                     Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <button type="button" class="btn btn-outline-light nav-button" aria-label="Online shop">
-                                        <a class="nav-link" href="online-shop.html">Shop</a>
-                                    </button>
+                                    <div class="nav-link">
+                                        <a class="btn btn-outline-light nav-button" aria-label="Online shop" href="online-shop.html">
+                                        Shop
+                                        </a>
+                                    </div>
                                 </li>     
                             </ul>
                         </div>  
