Added more content the About page to remove placeholder text. Added author bios to the Poetry Page. Added audio files for each poem to the project. Edited content in the Readme file to include additional sources for the bios, images, and audio files

--- a/about-this-project.html
+++ b/about-this-project.html
@@ -114,7 +114,7 @@
                                 The city is built on a weir, which helps mitigate the large volume of rain that falls annually. 
                                 The canal created by the weir is actually quite romantic (in nice weather). 
                                 Galway is also a medieval port city built along Galway Bay and protected from the Atlantic ocean. 
-                                This city's location, geography, and weather greatly influences people born in the city, and visitors. 
+                                This city's location, geography, and weather greatly influences people born in the city, those who've moved here and visitors. 
                             </div>
                         </div>
                     </div>
@@ -124,13 +124,18 @@
                     <div class="card-header faq-btn" id="headingTwo">
                         <h4 class="mb-0">
                             <button class="btn btn-link collapsed faq-font" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            test
+                            Where did the idea of this project come from? 
                             </button>
                         </h4>
                     </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                             <div class="card-body">
-                                 test
+                                I moved to Galway city right before the beginning of the COVID-19 pandemic. My husband is from Galway, but I'm from the states myself. 
+                                My aim for this project was to combine two things: my love for poetry and my experience getting to know my new hometown. 
+                                I have a background in writing and teaching literature. Now I have some experience with creating a website, so this all came together in Poems Around Galway.
+                                This project is my way of sharing what I've learned with the world. 
+                                The inspiration for this project also comes from the Galway Poetry Trail, which you can learn more about
+                                <a class="text-link" href="https://www.kennys.ie/galway-poetry-trail/1505-60galway-poetry-trail" target="_blank">here.</a> 
                             </div>     
                         </div>
                 </div>
@@ -139,13 +144,16 @@
                     <div class="card-header faq-btn" id="headingThree">
                         <h4 class="mb-0">
                             <button class="btn btn-link collapsed faq-font" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Collapsible Group Item #3
+                            Will you add more content to this project?
                             </button>
                         </h4>
                     </div>
                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                             <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                Yes, I'd like to expand this project in the future. I tried to include recently published works and classic peoms. 
+                                Also, I focused on gender parity for the poets featured. That being said, I realise that Galway is a diverse city. 
+                                Moving forward with this project, I'd like to feature more poets of colour, emigrants/immigrants to Ireland, LGBTQ writers, 
+                                travellers, and people from other marginalised groups. 
                             </div>
                         </div>
                     </div>
@@ -154,7 +162,6 @@
         </div>
 
     </section>
-        
         
     <!--Footer--> 
 
