--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Trocchi&display=swap" rel="stylesheet">
 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
    
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -96,7 +96,8 @@
                     <br>
                     Of pride and thick red Spanish wine and gold
                     <br>
-                    And a great come and go"</h2>
+                    And a great come and go"
+                </h2>
             </div>
         </div>       
     
@@ -141,13 +142,12 @@
                         <img src="assets/images/eyre-square.jpg" class="gallery-size image-position mobile-gallery" alt="Image of old cemetary headstones">
                     </a>    
                         <div class="gallery-caption mobile-caption bottom-padding">
-                            <h3>‘Men with Tired Hair’ by Rita Anne Higgins</h3>
+                            <h3>‘Men with Tired Hair’ by Rita Ann Higgins</h3>
                         </div>
                 </div> 
 
             </div>
     
-
     </section>
 
     <!--Footer--> 
