--- a/online-shop.html
+++ b/online-shop.html
@@ -96,7 +96,7 @@
     <section>
         <div class="row gallery-background">
             <div class="col-xl-4">
-                <img class="shop-image" src="assets/images/tshirt-1.jpg" alt="green t-shirt on a hanger">
+                <img class="shop-image" src="assets/images/tshirt-1.jpg" alt="Green t-shirt on a hanger">
                 <p class="shop-text contact-font">Poem Print T-shirt
                     <br>
                     €18
@@ -107,7 +107,7 @@
             </div>
 
             <div class="col-xl-4">
-                <img class="shop-image" src="assets/images/notebook.jpg" alt="green t-shirt on a hanger">
+                <img class="shop-image" src="assets/images/notebook.jpg" alt="Blue notebook">
                 <p class="shop-text contact-font">Notebook
                     <br>
                     €10
@@ -118,7 +118,7 @@
             </div>
 
             <div class="col-xl-4">
-                <img class="shop-image" src="assets/images/mug-1.jpg" alt="white mug in front of books and pen">
+                <img class="shop-image" src="assets/images/mug-1.jpg" alt="White mug in front of books and pen">
                <p class="shop-text contact-font">Poem Print Mug
                    <br>
                    €12
@@ -129,7 +129,6 @@
             </div>
         </div>
     </section>
-    
     
     <!--Footer--> 
 
