Edited footer social links on all pages to have correct formatting. Started adding my testing to the Readme file

--- a/contact-us.html
+++ b/contact-us.html
@@ -96,20 +96,20 @@
                     <h2 class="mobile-heading">Tell us more!</h2>
                     <br>
                     <label for="fname" class="form-font label-display mobile-label"> First Name</label>
-                    <input type="text" id="fname" name="firstname" class="label-width" aria-label="First Name">
+                    <input type="text" id="fname" name="firstname" class="label-width" aria-label="First Name" required>
                     <br>
                     <br>
                     <label for="fname" class="form-font label-display mobile-label">Last Name</label>
-                    <input type="text" id="lname" name="lastname" class="label-width" aria-label="Last Name">
+                    <input type="text" id="lname" name="lastname" class="label-width" aria-label="Last Name" required>
                     <br>
                     <br>
                     <label for="email-label" aria-label="Email Address" class="form-font label-display mobile-label">Email</label>
-                    <input id="email-label" type="email" name="email" placeholder="example@email.com" class="label-width" aria-label="Email Address">
+                    <input id="email-label" type="email" name="email" placeholder="example@email.com" class="label-width" aria-label="Email Address" required>
                     <br>
                     <br>
                     <label for="textarea" class="form-font label-display mobile-label">Send us your comments, ideas, or feedback</label>
                     <br>
-                    <textarea id="textarea" name="textarea" cols="45" rows="8" aria-label="Fill in comments in this text area"></textarea>
+                    <textarea id="textarea" name="textarea" cols="45" rows="8" aria-label="Fill in comments in this text area" required></textarea>
                     <br>
                     <br>
                     <input type="submit" value="Submit" class="newsletter-button btn btn-outline-light" aria-label="Submit this form">
@@ -188,18 +188,18 @@
                     <ul>
                         
                         <li class="social-icon">
-                            <a href="facebook.com" aria-label="Facebook" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
+                            <a href="https://www.facebook.com" aria-label="Facebook" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
                             </a>
 
                         </li>
                         <li class="social-icon">
-                            <a href="instagram.com" aria-label="Instagram" target="_blank">
+                            <a href="https://www.instagram.com" aria-label="Instagram" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="social-icon">
-                            <a href="http://twitter.com/" aria-label="Twitter" target="_blank">
+                            <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
                             </a>
                         </li>
