--- a/poetry.html
+++ b/poetry.html
@@ -88,7 +88,8 @@
     <section>
         <div class="row quote-background">
             <div class="col-xl-12 quote-box-size quote-mobile">
-                <h2 class="quote-position">Despite this easiness with life,<br>
+                <h2 class="quote-position">
+                    Despite this easiness with life,<br>
                     there is a waiting, a look out<br>
                     in anticipation of something.</h2>
             </div>
@@ -341,7 +342,7 @@
                     10 books of poems and 8 plays. She currently lives in Galway city and Spiddal. 
                     <br>
                     <br>
-                    Higgins work is known for addressing economic and gender-based inequalitites. The influence Galway city can also be seen throughout her work.
+                    Higgins' work is known for addressing economic and gender-based inequalitites. The influence Galway city can also be seen throughout her work.
                     'Men with Tired Hair' was chosen for this project because it's featured in Galwy's poetry trail. 
                     Learn more about the author <a class="text-link p-text-link" href="https://www.poetryfoundation.org/poets/rita-ann-higgins" target="_blank">here</a>.
                 </p>    
@@ -404,18 +405,18 @@
                     <ul>
                         
                         <li class="social-icon">
-                            <a href="facebook.com" aria-label="Facebook" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
+                            <a href="https://www.facebook.com" aria-label="Facebook" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
                             </a>
 
                         </li>
                         <li class="social-icon">
-                            <a href="instagram.com" aria-label="Instagram" target="_blank">
+                            <a href="https://www.instagram.com" aria-label="Instagram" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="social-icon">
-                            <a href="http://twitter.com/" aria-label="Twitter" target="_blank">
+                            <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
                             </a>
                         </li>
