--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
     <section>
         <div class="row quote-background">
             <div class="col-xl-12 quote-box-size quote-mobile">
-                <h2 class="quote-position">This town is eaten through with memory
+                <h2 class="quote-position">
+                    This town is eaten through with memory
                     <br>
                     Of pride and thick red Spanish wine and gold
                     <br>
@@ -203,7 +204,7 @@
                         
                         <li class="social-icon">
                             <a href="https://www.facebook.com" aria-label="Facebook" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
                             </a>
 
                         </li>
