--- a/online-shop.html
+++ b/online-shop.html
@@ -182,18 +182,18 @@
                     <ul>
                         
                         <li class="social-icon">
-                            <a href="facebook.com" aria-label="Facebook" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
+                            <a href="https://www.facebook.com" aria-label="Facebook" target="_blank">
+                            <i class="fab fa-facebook-f" aria-hidden="true"></i>
                             </a>
 
                         </li>
                         <li class="social-icon">
-                            <a href="instagram.com" aria-label="Instagram" target="_blank">
+                            <a href="https://www.instagram.com" aria-label="Instagram" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
                             </a>
                         </li>
                         <li class="social-icon">
-                            <a href="http://twitter.com/" aria-label="Twitter" target="_blank">
+                            <a href="https://www.twitter.com/" aria-label="Twitter" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
                             </a>
                         </li>
